--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -15,7 +15,8 @@
   --primary-foreground: oklch(0 0 0);
   --secondary: oklch(0.3 0 0);
   --secondary-foreground: oklch(1 0 0);
-  --muted: oklch(0.967 0.001 286.375);
+  --detail: oklch(0.57 0.209 22.65);
+  --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.552 0.016 285.938);
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
